# llmcore

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  pyproject.toml  release_notes.md  run_example.sh
bindings/: COMMIT_MESSAGE.txt  CONTINUATION_GUIDE_B1.md  CONTRACT.md  PR_DESCRIPTION.md  README.md  USAGE.md  buf.gen.yaml  buf.yaml  contract_map.yaml
bindings/c/: CMakeLists.txt  COMMIT_MESSAGE.txt  Makefile  PR_DESCRIPTION.md  README.md  USAGE.md
bindings/c/examples/: quickstart.c  sessions.c
bindings/c/include/: llmcore_client.h
bindings/c/src/: llmcore_client.c
bindings/c/tests/: e2e.c
bindings/cpp/: CMakeLists.txt  COMMIT_MESSAGE.txt  PR_DESCRIPTION.md  README.md  USAGE.md
bindings/cpp/examples/: quickstart.cpp  sessions.cpp
bindings/cpp/include/llmcore/: client.hpp
bindings/cpp/src/: client.cpp
bindings/cpp/tests/: e2e.cpp
bindings/go/: .gitignore  COMMIT_MESSAGE.txt  Makefile  PR_DESCRIPTION.md  README.md  USAGE.md  audio_test.go  buf.gen.go.yaml  client.go  client_test.go  doc.go  errors.go  go.mod  harness_test.go  options.go  tier1.go  tier1_test.go
bindings/rust/: COMMIT_MESSAGE.txt  Cargo.toml  PR_DESCRIPTION.md  README.md  USAGE.md
bindings/rust/llmcore-client/: Cargo.toml
bindings/rust/llmcore-client/examples/: quickstart.rs  sessions.rs
bindings/rust/llmcore-client/src/: client.rs  error.rs  lib.rs
bindings/rust/llmcore-client/tests/: e2e.rs
bindings/rust/llmcore-embedded/: Cargo.toml  README.md
bindings/rust/llmcore-embedded/examples/: embedded_chat.rs
bindings/rust/llmcore-embedded/src/: convert.rs  error.rs  lib.rs  runtime.rs  tier1.rs
bindings/rust/llmcore-embedded/tests/: integration.rs
bindings/rust/llmcore-proto/: Cargo.toml  build.rs
bindings/rust/llmcore-proto/src/: lib.rs
bindings/scripts/: contract_guard.py  e2e_smoke.py  gen_proto.sh
bindings/typescript/: COMMIT_MESSAGE.txt  PR_DESCRIPTION.md  README.md  USAGE.md  buf.gen.ts.yaml  package-lock.json  package.json  tsconfig.json
container_images/: Makefile  README.md  SECURITY.md
container_images/base/: Dockerfile  capabilities.json
docs/: Agentic_System_Guide.md  CONFIG_REFERENCE.md  Deepgram_provider_usage.md  External_RAG_integration_guide.md  SEMANTISCAN_CONFIG_GUIDE.md  Search_providers_rationale.md  Search_providers_usage.md  USAGE.md  USAGE_chat_with_usage.md  api_reference.md  configuration_guide.md  developers_guide.md  llmcore_spec_v1.0.md  model_cards.md  ollama_python_types.py  spec_v7_step_1.1_docs.md  spec_v7_step_1.2_docs.md  spec_v7_step_1.3_docs.md  spec_v7_step_1.4_docs.md  spec_v7_step_2.1_docs.md  spec_v7_step_2.2_docs.md  spec_v7_step_2.3_docs.md  spec_v7_step_3.1_docs.md  usage.md
docs/references/: gemini_api_how-to.txt  gemini_provider copy.py  google-api-core.html  google.genai_docs_01.rst  llmcore-A_Guide_for_Developers_v0.11.0.md  ollama_python_sdk_readme.txt  ollama_python_types.py  ollama_rest_api.txt  openai_api_spec-v3.1.0.txt
examples/: README.md  brightdata_search_example.py  chat_with_usage.py  deepgram_batch_stt.py  deepgram_batch_tts.py  deepgram_flux.py  deepgram_streaming_stt.py  deepgram_streaming_tts.py  deepgram_text_intelligence.py  deepgram_voice_agent.py  gemini_example.py  hosted_providers_example.py  live_audio_smoke.py  live_provider_smoke.py  live_search_smoke.py  mcp_example.py  model_cards_and_tokens.py  ollama_example.py  rag_example.py  search_to_chat_external_rag.py  semanticscholar_search_example.py  serpapi_search_example.py  serper_search_example.py  session_chat.py  simple_chat.py  streaming_chat.py  zai_example.py
migrations/: 001_create_tenants_and_api_keys_tables.sql  002_seed_demo_tenant.sql  003_create_tenant_tool_management_tables.sql  004_add_hitl_support_to_agent_tasks.sql
scripts/: apply_step_1_3_patches.py  check_gemini.py  quick_tests_only.sh  step1_1_add_session_methods.py  step1_1_apply_fixes.py  step1_1_cleanup.py  step1_1_delete_service_components.sh  step1_1_final_verification.sh  step1_1_fix_api_method.sh  step1_1_fix_storage_imports.sh  step1_1_verify.sh  storage-cli.sh  test_configuration_loading.py  test_library_mode.py  test_semantiscan_pydantic_validation.py  test_session_management.py  verify_phase4_ast.py  verify_phase5_hitl.py
src/llmcore/: __init__.py  api.py  exceptions.py  get_version.py  logging_config.py  models.py  models_multimodal.py  tokens.py  tracing.py  usage.py
tests/: run_darwin_tests.py  test_audit_sprint_1_3.py  test_exceptions.py  test_huggingface_provider.py  test_logging_config.py  test_models.py  test_phase4_confy_integration.py  test_tokens.py  verify_integration.py
tests/adhoc_checks/: __init__.py  diagnose.py  diagnose_imports.py  sanity_check.py  verify_darwin_layer2.py
tests/agents/: __init__.py  test_activity_fallback.py  test_activity_memory.py  test_capability_check_integration.py  test_circuit_breaker_integration.py  test_memory_and_manager.py  test_persona_and_single_agent.py  test_phase1_fixes.py  test_phase2_activities.py  test_phase3_intelligence.py  test_phase4_resources.py  test_progress_estimation.py  test_prompt_utils.py  test_sandbox_integration.py  test_streaming.py  test_tool_manager_runtime_registration.py
tests/api/: test_chat_with_usage.py  test_context_info_introspection.py  test_enhanced_agent_factory.py  test_external_rag_integration.py  test_observability_wiring.py  test_phase1_model_management.py  test_phase3_session_commands.py  test_phase3_session_operations.py  test_phase4_rag_collections.py  test_phase4_statistics.py  test_phase6_export_import.py  test_phase6_sessions2_3.py  test_phase7_config.py
tests/api_server/: conftest.py  test_api_server.py  test_auth.py  test_functional.py  test_runner.py
tests/autonomous/: __init__.py  conftest.py  test_escalation.py  test_fly_state_integration.py  test_goals.py  test_heartbeat.py  test_integration.py  test_resource.py  test_skills.py  (+2 more)
tools/: cardctl.py  check_google-genai_errors_import.py  gemini_imports_test.py  generate_api_key.py  generate_deepgram_cards.py  generate_mistral_cards.py  generate_openrouter_cards.py  llmcore.confy-schema.json
(+2114 files in other folders)
