# pyproject.toml
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcore"
version = "0.18.9"
description = "A unified, flexible, and extensible interface for interacting with various Large Language Models (LLMs)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Araray Velho", email = "araray@gmail.com" }
]
keywords = ["llm", "ai", "language-model", "chat", "rag", "nlp", "neural", "networks", "library", "module"]

# Core dependencies for llmcore
dependencies = [
    "confy>=0.3.0",
    "aiohttp>=3.11.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.0.0", # For older Python compatibility if needed
    "pydantic>=2.0.0",
    "tomli>=2.0.0", # For loading default config
    "aiofiles>=24.0.0", # For async file operations in JsonSessionStorage
    "tiktoken>=0.9.0", # Added for token counting (Ollama, OpenAI)
    "aiosqlite>=0.21.0",
    "deepdiff>=8.5.0",
]

[project.optional-dependencies]
# Dependencies for specific providers
openai = ["openai>=1.77.0"]
anthropic = ["anthropic>=0.51.0"]
gemini = ["google-genai>=1.10.0", "google-api-core>=2.20.0"]
ollama = ["ollama>=0.4.8"]

# Dependencies for specific storage backends
sqlite = [] # sqlite3 is part of standard library
postgres = ["psycopg[binary]>=3.2.0", "pgvector>=0.4.1"] # Use extras for binary
chromadb = ["chromadb>=1.0.0"]

# Dependencies for specific embedding models
sentence_transformers = ["sentence-transformers>=2.2.0"]
# OpenAI and Google embeddings are usually part of their main SDKs (openai, google-genai)

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0", # For coverage
    "respx>=0.20.0", # For mocking HTTP requests (useful for provider tests)
    "ruff>=0.1.0" # For linting
]

# Development dependencies (includes testing and other tools)
dev = [
    "llmcore[test]", # Include test dependencies
    "ruff", # Linter
    "mypy>=1.0.0", # Type checker
    "pre-commit>=3.0.0", # For git hooks
    "tox>=4.0.0", # For testing in different environments
    "build", # For building the package
    "twine" # For uploading to PyPI
]

all = [ # To install all optional dependencies
    "llmcore[openai]",
    "llmcore[anthropic]",
    "llmcore[gemini]",
    "llmcore[ollama]",
    "llmcore[sqlite]",
    "llmcore[postgres]",
    "llmcore[chromadb]",
    "llmcore[sentence_transformers]",
]


[project.urls]
Homepage = "https://github.com/araray/llmcore"
Repository = "https://github.com/araray/llmcore"
# Documentation = "https://araray.github.io/llmcore" # Add when docs exist
Issues = "https://github.com/araray/llmcore/issues"

[project.scripts]
# If llmcore will have a CLI entry point (e.g., for management tasks)
# llmcore-cli = "llmcore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # Specifies that packages are under the 'src' directory

# [tool.setuptools.package_data]
# llmcore = ["config/default_config.toml"] # To include the default config file

# --- Ruff Linter Configuration ---
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv", "*.egg-info",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C", "B", "A", "RUF", "ASYNC", "PYI",
]
ignore = [
    "E501", # Line too long (handled by black/formatter)
    "B008", # Do not perform function calls in argument defaults.
    "C901", # Too complex (consider refactoring if triggered often)
    "E731", # do not assign a lambda expression, use a def
    "A003",
]
# Allow unused arguments in specific methods (like ABC implementations)
# dummy-variable-rgx = "^(_|dummy_)" # Example if needed

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- MyPy Type Checker Configuration ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Ignore missing imports for optional deps initially
disallow_untyped_defs = true
check_untyped_defs = true
# Enable stricter checks gradually
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false # Allow untyped defs in tests

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/llmcore --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
asyncio_mode = "auto" # For pytest-asyncio

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["src/llmcore"]
omit = [
    "src/llmcore/__main__.py", # If a main for CLI exists
]

[tool.coverage.report]
show_missing = true
fail_under = 75 # Target coverage percentage
