[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcore"
version = "0.25.0"
description = "A unified, flexible, and extensible interface for interacting with various Large Language Models (LLMs)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Araray Velho", email = "araray@gmail.com" }
]
keywords = ["llm", "ai", "language-model", "chat", "rag", "nlp", "neural", "networks", "library", "module"]

# Core dependencies for llmcore - LIBRARY MODE ONLY
# Removed: fastapi, uvicorn, arq, redis, bcrypt, asyncpg, opentelemetry, prometheus, python-multipart
dependencies = [
    "confy>=0.3.0",
    "aiohttp>=3.11.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.9.0",  # For token counting (Ollama, OpenAI)
    "aiosqlite>=0.21.0",  # For SQLite session storage
    "deepdiff>=8.5.0",  # For configuration diff/merge
    "sqlalchemy[asyncio]>=2.0.40",  # For session storage (SQLite/Postgres backends)
]

[project.optional-dependencies]
# Dependencies for specific providers
openai = ["openai>=1.77.0"]
anthropic = ["anthropic>=0.51.0"]
gemini = ["google-genai>=1.10.0", "google-api-core>=2.20.0"]
ollama = ["ollama>=0.4.8"]

# Dependencies for specific storage backends
sqlite = []  # sqlite3 is part of standard library
postgres = ["psycopg[binary]>=3.2.0", "pgvector>=0.4.1"]  # Optional: for PostgreSQL session/vector storage
chromadb = ["chromadb>=1.0.0"]

# Dependencies for specific embedding models
sentence_transformers = ["sentence-transformers>=2.2.0"]
# OpenAI and Google embeddings are usually part of their main SDKs (openai, google-genai)

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",  # For mocking HTTP requests
    "ruff>=0.1.0"
]

# Development dependencies (includes testing and other tools)
dev = [
    "llmcore[test]",
    "ruff",  # Linter
    "mypy>=1.0.0",  # Type checker
    "pre-commit>=3.0.0",  # For git hooks
    "tox>=4.0.0",  # For testing in different environments
    "build",  # For building the package
    "twine"  # For uploading to PyPI
]

all = [  # To install all optional dependencies
    "llmcore[openai]",
    "llmcore[anthropic]",
    "llmcore[gemini]",
    "llmcore[ollama]",
    "llmcore[sqlite]",
    "llmcore[postgres]",
    "llmcore[chromadb]",
    "llmcore[sentence_transformers]",
]

[project.urls]
Homepage = "https://github.com/araray/llmcore"
Repository = "https://github.com/araray/llmcore"
Issues = "https://github.com/araray/llmcore/issues"

[project.scripts]
# Removed: console_scripts for FastAPI server and TaskMaster worker
# llmcore is now a pure library with no CLI entry points

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff Linter Configuration ---
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv", "*.egg-info",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C", "B", "A", "RUF", "ASYNC", "PYI",
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
    "E731",  # do not assign a lambda expression, use a def
    "A003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- MyPy Type Checker Configuration ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/llmcore --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["src/llmcore"]
omit = [
    "src/llmcore/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
