[package]
name = "llmcore-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated llmcore.v1 protobuf types and tonic gRPC clients."

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
